# DB12

./: .pre-commit-config.yaml  DIRACbenchmark.py  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: integration-test.yml  prepare_environment.sh  pypi-publish.yml  python2-3-app.yml
score-analysis/: README.md
score-analysis/resources/results/: results_ordered_201021.json  results_ordered_240921.json
score-analysis/resources/tools/: DB12.py  env.py  executable.sh  getDB12Scores.py  submit.sh  submitDB12.py
src/db12/: __init__.py  __main__.py  benchmark.py  factors.json
tests/: integration_test.sh  test_DB12.py
