###############################################################################
# Setuptools
###############################################################################

[metadata]
name = DB12
description = DIRAC Benchmark 2012
long_description = file: README.md
url = https://github.com/DIRACGrid/DB12/
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing

[options]
package_dir =
    = src
packages = find:
zip_safe = False
include_package_data = True

[options.package_data]
* = factors.json

[options.packages.find]
where=src

[options.entry_points]
db12 =
    metadata = db12:extension_metadata
console_scripts =
    db12 = db12.__main__:main
